FIX | GUI - Overflow (auto) appcontainer

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -354,6 +354,7 @@ textarea {
   position: relative;
   min-height: 100vh;
   padding-bottom: 2em;
+  overflow: auto;
 }
 
 .footer {
